src/objects/PSA_Implementer__c.object
<CustomObject>
    <description>The collection of accounts (Guidewire + Partner) involved in implementing a project.</description>
    <fields>
        <fullName>PSA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementers</relationshipLabel>
        <relationshipName>Implementers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Implementers</relationshipLabel>
        <relationshipName>Implementers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Implementer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Account__c</columns>
        <columns>PSA_Partner__c</columns>
        <columns>PSA_Primary__c</columns>
        <columns>PSA_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Implementer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>